dgf <sdf